<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Toy Collection Crazy! Scarygirl Edition</string>
    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <string name="about_message">Developer: Sophia Hernandez, student at UT@Austin\nToy Designer: Nathan Jurevicius from Australia continues to design toys for companies like KidRobot and Noferin.</string>
    <string name="about_title">Information</string>
    <string name="see_toys">Toys!</string>
    <string name="title_section1">All Toys</string>
    <string name="title_section2">My Toys</string>
    <string name="title_section3">Collectors</string>
    <string name="title_activity_main"></string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_custom_toy">Add a Toy</string>
    <string name="title_activity_one_toy">Toy</string>
    <string name="toy_name">Name:</string>
    <string name="toy_set">Set:</string>
    <string name="toy_year">Year:</string>
    <string name="owned">I Own This</string>
    <string name="wanted">I Want This</string>
    <string name="unnecessary">Sell/Trade</string>
    <string name="add">Add</string>
    <string name="add_to_toys">Add To My Toys</string>
    <string name="okButton">OK</string>
    <string name="errorTitle">Toy Name Missing</string>
    <string name="errorMessage">Please enter the toy name.</string>
    <string name="confirmTitle">Deletion Confirmation</string>
    <string name="confirmMessage">This will permanently delete your custom toy.</string>
    <string name="denyDeleteTitle">Delete</string>
    <string name="denyDeleteMessage">You may only delete a custom toy.</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    <string name="Notification">Click Register to Sign Up for Notifications.</string>

</resources>
