<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    tools:context=".CustomToyActivity" >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp" >

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="Add image button." />

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/toy_name"
            android:ems="10" 
            android:padding="5dp">
            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editSet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/toy_set"
            android:ems="10" 
            android:padding="5dp">
        </EditText>

        <EditText
            android:id="@+id/editYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/toy_year"
            android:ems="10" 
            android:padding="5dp">
        </EditText>

        <CheckBox
            android:id="@+id/checkOwn"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/owned" />

        <CheckBox
            android:id="@+id/checkWant"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/wanted" />

        <CheckBox
            android:id="@+id/checkTrade"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/unnecessary" />
    </LinearLayout>

    <Button
        android:id="@+id/addToCollection"
        android:background="@color/scary_green"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        
        android:layout_marginTop="15dp"
        android:text="@string/add" />

</RelativeLayout>
